Fix analytics id. Add steam text. Increase contrast.

--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,7 @@ hr {
   flex-direction: column;
   align-items: left;
   font-size: 14pt;
-  color: #6d6a65;
+  color: #afaaa2;
   padding: 15px;
   background-blend-mode: darken;
 }
@@ -76,7 +76,7 @@ hr {
 .App::after {
   content: '';
   background: linear-gradient(#100607, #000000);
-  opacity: 0.6;
+  opacity: 0.7;
   top: 0;
   left: 0;
   bottom: 0;
@@ -91,7 +91,7 @@ hr {
 }
 
 .highlight {
-  color: #cec59f;
+  color: #ebe1b6;
 }
 
 .replybox {
